# crudo

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  compose.yaml  index.html
.githooks/: pre-commit
.github/workflows/: ci.yml  crates.yml  docker.yml
Formula/: crudo.rb
config/: minimal.toml  postgres.toml  sqlite.toml  store.toml
docs/: index.md  limitations.md  package-lock.json  package.json
docs/.vitepress/: config.mts
docs/.vitepress/theme/: custom.css
docs/examples/: authentication.md  curl.md  custom-crud.md  limits-errors.md  postgresql.md  sqlite.md  store.md
docs/guide/: configuration.md  core-concepts.md  getting-started.md  security.md
docs/operations/: deployment.md  docker.md
docs/reference/: actions.md  configuration.md  demo-api.md  http-api.md  rust-api.md  wallets.md
scripts/: check.sh
src/: app.rs  config.rs  database.rs  lib.rs  main.rs  server.rs  tls.rs  wallet.rs
tests/: e2e.rs  router.rs
