[package]
name = "crudo"
version = "0.4.1"
edition = "2024"
description = "A configuration-driven CRUD server"
include = [
    "/src/**",
    "/tests/**",
    "/config/**",
    "/Cargo.toml",
    "/Cargo.lock",
    "/README.md",
    "/LICENSE",
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/melonask/crudo"
rust-version = "1.97"

[dependencies]
anyhow = "1"
altcha = "0.1"
argon2 = "0.5"
axum = "0.8"
base64 = "0.22"
bip39 = { version = "2.2", features = ["zeroize"] }
bitcoin = "0.32"
bs58 = "0.5"
clap = { version = "4", features = ["derive"] }
ed25519-dalek = "3"
hmac = "0.13"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls-no-provider"] }
rand = "0.10"
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
sha3 = "0.12"
sqlx = { version = "0.9", default-features = false, features = ["runtime-tokio", "tls-rustls", "any", "sqlite", "postgres"] }
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread", "net", "signal"] }
toml = "1"
tower = { version = "0.5", features = ["limit", "util"] }
tower-http = { version = "0.7", features = ["cors", "timeout"] }
zeroize = "1"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = "symbols"

[dev-dependencies]
http-body-util = "0.1"
tempfile = "3"
